syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.myapp.helloworld.grpc";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc StatusStream(StatusRequest) returns (stream StatusResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message StatusRequest {}

message StatusResponse {
    string status = 1;
}
